# numerics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
primitives/: CMakeLists.txt  prim_matrix.h  prim_quaternion.h  prim_vector.h  quaternion.c  vector.c
